--- a/sou_chef_flutter/android/gradle.properties
+++ b/sou_chef_flutter/android/gradle.properties
@@ -1,3 +1,9 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+# Increase Gradle memory allocation and fix jlink.exe error
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError --add-opens java.base/java.io=ALL-UNNAMED
+
+# Standard settings for modern Android development with Flutter
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+
+
