--- a/sou_chef_flutter/pubspec.yaml
+++ b/sou_chef_flutter/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_redux: ^0.10.0
   firebase_auth: ^6.1.0
   redux_thunk: ^0.4.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
