--- a/sou_chef_flutter/pubspec.yaml
+++ b/sou_chef_flutter/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.1.5
   http_parser: ^4.0.2
   flutter_tts: ^4.2.3
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
