--- a/sou_chef_flutter/android/gradle.properties
+++ b/sou_chef_flutter/android/gradle.properties
@@ -4,6 +4,6 @@ org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryErro
 # Standard settings for modern Android development with Flutter
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+# org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
 
 
