--- a/sou_chef_flutter/pubspec.yaml
+++ b/sou_chef_flutter/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   google_nav_bar: ^5.0.7
   stream_transform: ^2.1.1
   bloc_concurrency: ^0.3.0
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
